refactor: 토끼 리뷰 반경