@@ -10,7 +10,7 @@ public class Race {
 
     public void addCars(String[] carNames) {
         for (String name : carNames) {
-            if (name == null || name.trim().isEmpty() || name.length() > 5) {
+            if (name.isBlank() || name.length() > 5) {
                 throw new IllegalArgumentException("자동차 이름은 1자 이상 5자 이하여야 합니다: " + name);
             }
 
